@@ -2,6 +2,7 @@ PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ??? 2000, Version 4.0.2
+- Improved the output-buffering functions to be re-entrant (Zeev)
 - Made ldap_add(), ldap_modify(), ldap_mod_add(), ldap_mod_replace()
   binary-safe. Original patch: Terrence Miao <terrence_miao@email.com> (Jani)
 - CGI aka. command line version has now an option '-l' for syntax check
